# yadro-simulator-development-task

./: README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  solution.md
.github/workflows/: ci.yml
src/: __init__.py  io_utils.py  models.py  scheduler.py
tests/cases/: deficit.json  generate_cases.py  surplus.json
tests/unit/: test_scheduler.py
