[project]
name = "YADRO-task"
version = "1.0.0"
readme = "README.md"
description = "Task for YADRO's trainee position"
requires-python = "==3.12.*"

dependencies = [
    "numpy>=1.24",
    "pulp>=2.7",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "taskipy>=1.13.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = ["ignore:Constructing LpVariable.*:DeprecationWarning"]
markers = [
    "demo: tests demonstrating the two scenarios from the task statement (surplus, deficit)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.taskipy.tasks]
test = "pytest tests/unit/ -v --cov=src --cov-report=term-missing"
demo = "pytest tests/unit/ -m demo -v"
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"
typecheck = "mypy src/"
check = "task lint && task typecheck && task test"
demo_check = "task lint && task typecheck && task demo"